force-app/main/default/objects/Sale_Line_Item__c/fields/Cost_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Kg__c</fullName>
    <description>Filled by trigger — not manually. Copied from Inventory.Avg_Cost_Per_Kg__c at moment of sale. Locked forever so profit history is accurate even after future purchases change the avg cost.</description>
    <inlineHelpText>Automatically filled</inlineHelpText>
    <label>Cost Per Kg (at sale)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>