force-app/main/default/objects/Sale_Line_Item__c/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <formula>IF(GST_Applied__c, Quantity__c * Rate_Per_Kg__c * 0.05, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>