force-app/main/default/objects/Sale_Line_Item__c/fields/GST_Applied__c.field-meta.xml
<CustomField>
    <fullName>GST_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only tick for GST registered clients.</inlineHelpText>
    <label>GST Applied</label>
    <type>Checkbox</type>
</CustomField>