force-app/main/default/objects/Sale_Line_Item__c/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <formula>(Quantity__c * Rate_Per_Kg__c) + GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>