force-app/main/default/objects/Sale_Line_Item__c/fields/Line_Profit__c.field-meta.xml
<CustomField>
    <fullName>Line_Profit__c</fullName>
    <formula>Profit_Per_Kg__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>