force-app/main/default/objects/Sale_Line_Item__c/fields/Packet_Type__c.field-meta.xml
<CustomField>
    <fullName>Packet_Type__c</fullName>
    <label>Packet Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Packet_Type</valueSetName>
    </valueSet>
</CustomField>