force-app/main/default/objects/Sale_Line_Item__c/fields/Profit_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Profit_Per_Kg__c</fullName>
    <formula>Rate_Per_Kg__c - Cost_Per_Kg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Per Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>