force-app/main/default/objects/Sale_Line_Item__c/fields/Rate_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Kg__c</fullName>
    <label>Rate Per Kg</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>